# kodak_toolkit

./: README.md  setup.cfg
Examples/: change_plots_data.ipynb  create_advanced_output_I.ipynb  create_advanced_output_II.ipynb  create_simple_output.ipynb
Examples/test_outputs/: advanced_output_I.plots  advanced_output_II.plots  simple_output.plots
kodak/: kodak_creator.py  trace_types.py
