[metadata]
name = kodak_viz
version = 0.0.1
author = A.J. Vetturini
author_email: avetturi@andrew.cmu.edu
description = This is a library package for visualising figures using the Kodak visualisation webpage.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajvetturini/kodak_toolkit
classifiers = 
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent

[options]
install_requires =
    numpy>=1.26.3
    plotly>=5.18.0
python_requires = >= 3.9
include_package_data = True